{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 14,
  "lineage": "3741ee61-e54a-dc6f-7459-01bb839f7c12",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb44fcadf397a078",
            "association_id": "eipassoc-06b1c82cdc1ac1aa2",
            "domain": "vpc",
            "id": "eipalloc-0fb44fcadf397a078",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0bb65c82409006147",
            "private_dns": "ip-10-192-1-92.us-west-1.compute.internal",
            "private_ip": "10.192.1.92",
            "public_dns": "ec2-52-9-17-201.us-west-1.compute.amazonaws.com",
            "public_ip": "52.9.17.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:internet-gateway/igw-0b4966b9162856c29",
            "id": "igw-0b4966b9162856c29",
            "owner_id": "311747045935",
            "tags": {
              "Name": "DEV IGW"
            },
            "tags_all": {
              "Name": "DEV IGW"
            },
            "vpc_id": "vpc-0c275acb5f8b717e8"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb44fcadf397a078",
            "connectivity_type": "public",
            "id": "nat-02bd0c052b822c8c6",
            "network_interface_id": "eni-0bb65c82409006147",
            "private_ip": "10.192.1.92",
            "public_ip": "52.9.17.201",
            "subnet_id": "subnet-04015ccf620d052a3",
            "tags": {
              "Name": "DEV NAT Gateway"
            },
            "tags_all": {
              "Name": "DEV NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:route-table/rtb-07eb3f09d7326a36f",
            "id": "rtb-07eb3f09d7326a36f",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02bd0c052b822c8c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c275acb5f8b717e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.NATgw",
            "aws_subnet.publicsubnets",
            "aws_vpc.dev",
            "aws_eip.nateIP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:route-table/rtb-0f9ad62452b8afed5",
            "id": "rtb-0f9ad62452b8afed5",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4966b9162856c29",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c275acb5f8b717e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5c4a2a261b73bc8",
            "route_table_id": "rtb-07eb3f09d7326a36f",
            "subnet_id": "subnet-036338e7be35175b5"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b8024ef3d7c6422",
            "route_table_id": "rtb-0f9ad62452b8afed5",
            "subnet_id": "subnet-04015ccf620d052a3"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:subnet/subnet-036338e7be35175b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.192.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036338e7be35175b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Private Subnet"
            },
            "tags_all": {
              "Name": "DEV Private Subnet"
            },
            "vpc_id": "vpc-0c275acb5f8b717e8"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:subnet/subnet-04015ccf620d052a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.192.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04015ccf620d052a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Public Subnet"
            },
            "tags_all": {
              "Name": "DEV Public Subnet"
            },
            "vpc_id": "vpc-0c275acb5f8b717e8"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:vpc/vpc-0c275acb5f8b717e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.192.0.0/16",
            "default_network_acl_id": "acl-080d963d56b35a82e",
            "default_route_table_id": "rtb-0ae59837fe9908e4e",
            "default_security_group_id": "sg-01e6ef5ea5a54a0ef",
            "dhcp_options_id": "dopt-0666e71eb77786b96",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c275acb5f8b717e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae59837fe9908e4e",
            "owner_id": "311747045935",
            "tags": {
              "Name": "DEV VPC"
            },
            "tags_all": {
              "Name": "DEV VPC"
            }
          }
        }
      ]
    }
  ]
}